slight ui change

--- a/semesters.html
+++ b/semesters.html
@@ -59,7 +59,7 @@
 
     "cse": {
       "sem1": ["Applied Mathematics", "Applied Physics", "Programming with C", "Communication Skills", "Web Application Development", "Basics of Electrical and Electronics Engineering"],
-      "sem2": ["Applied Mathematics – II", "Applied Physics-II", "Environmental Science (EVS)", "Communication Skills", "Engineering Mechanics", "Workshop Practice"],
+      "sem2": ["Applied Mathematics – II", "Applied Physics-II", "Environmental Sciences (EVS)", "Communication Skills", "Engineering Mechanics", "Workshop Practice"],
       "sem3": ["Discrete Structures (DM)", "Software Engineering (SE)", "Data Structures (DS)", "Database Management System (DBMS)", "Material Science & Engg (MSE)", "Numerical Method (NM)"],
       "sem4": ["Operating Systems", "Object Oriented Programming (OOPS)", "Computer Organization and Architecture (COA)", "Design and Analysis of Algorithm (DAA)", "Optimization Techniques (OT)", "Operation Management (OM)", "Disaster Management"],
       "sem5": ["Theory of Computation (TOC)", "Data Communication and Computer Network (DCCN)", "Artificial Intelligence (AI)", "Professional Ethics and Human Values (PEHV)", "Modelling and Simulation (MS)"],
@@ -94,7 +94,7 @@
 
 
     "ece": {  
-        "sem1": ["Probability and Statistics (PS)", "Environmental Sciences", "Signals and Systems", "Communication Skills", "Electronics Workshop", "Programming Fundamentals"],  
+        "sem1": ["Probability and Statistics (PS)", "Environmental Sciences (EVS)", "Signals and Systems", "Communication Skills", "Electronics Workshop", "Programming Fundamentals"],  
         "sem2": ["Applied Mathematics - II", "Applied Physics - II", "Environmental Sciences (EVS)", "Communication Skills", "Engineering Mechanics", "Workshop Practice"],  
         "sem3": ["Analog Electronics (AE)", "Network Analysis & Synthesis (NAS)", "Digital Electronics (DE)", "Signals & Systems (SS)", "Database Management System (DBMS)"],  
         "sem4": ["Linear Integrated Circuits", "Digital System Design", "Electromagnetic Field Theory", "Communication Systems", "Object Oriented Programming (OOP)", "Disaster Management (DM)"],  
@@ -119,7 +119,7 @@
 
     "ai-ml": {    
         "sem1": ["Probability and Statistics (PS)", "Environmental Sciences (EVS)", "Signals and Systems (SNS)", "Communication Skills (CS)", "Electronics Workshop (EW)", "Programming Fundamentals (PF)"],  
-        "sem2": ["Object Oriented Programming using Java (OOPS)", "Fundamentals of Data Structure", "Introduction to Data Science", "Environmental Science (EVS)", "Probability and Statistics (PS)", "IT Workshop (ITW)"],  
+        "sem2": ["Object Oriented Programming using Java (OOPS)", "Fundamentals of Data Structure", "Introduction to Data Science", "Environmental Sciences (EVS)", "Probability and Statistics (PS)", "IT Workshop (ITW)"],  
         "sem3": ["Discrete Structures (DM)", "Software Engineering (SE)", "Material Science and Engineering (MSE)", "Numerical Methods (NM)", "Database Management System (DBMS)", "Artificial Intelligence (AI)"],  
         "sem4": ["Computer Networks (CN)", "Operating Systems (OS)", "Design and Analysis of Algorithms (DAA)", "Machine Learning (ML)", "Optimization Techniques (OT)", "Operation Management (OM)", "Disaster Management (DM)"],  
         "sem5": ["Optimization Techniques and Decision Making (OTDM)", "Cryptography and Network Security (CNS)", "Social Networking and Mining (SNM)", "Theory of Computation (TOC)", "Professional Ethics and Human Values (PEHV)"],  
@@ -131,7 +131,7 @@
 
     "dmam": {     
         "sem1": ["Probability and Statistics (PS)", "Environmental Sciences (EVS)", "Signals and Systems (SNS)", "Communication Skills (CS)", "Electronics Workshop (EW)", "Programming Fundamentals (PF)"],  
-        "sem2": ["Object Oriented Programming using Java (OOPS)", "Fundamentals of Data Structure", "Introduction to Data Science (IDS)", "Environmental Science (EVS)", "Probability and Statistics (PS)", "IT Workshop (ITW)"],  
+        "sem2": ["Object Oriented Programming using Java (OOPS)", "Fundamentals of Data Structure", "Introduction to Data Science (IDS)", "Environmental Sciences (EVS)", "Probability and Statistics (PS)", "IT Workshop (ITW)"],  
         "sem3": ["(To be updated)", "(To be updated)", "(To be updated)", "(To be updated)", "(To be updated)", "(To be updated)"],  
         "sem4": ["(To be updated)", "(To be updated)", "(To be updated)", "(To be updated)", "(To be updated)", "(To be updated)"],  
         "sem5": ["(To be updated)", "(To be updated)", "(To be updated)", "(To be updated)", "(To be updated)"],  
